--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
       "lib": ["es2021"],
       "skipLibCheck": true,
       "rootDir": "src",
-      "outDir": "dist"
-    }
+      "outDir": "dist",
+     
+    },
+    "exclude": ["node_modules", "dist", "msdl", "scores"]
+
   }
